--- a/kubernetes/控制器/yaml/replicaSet-nginx.yml
+++ b/kubernetes/控制器/yaml/replicaSet-nginx.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: nginx-rs
-  lables：
+  lables:
     role: nginx-rs
   namespace: default
 spec:
