--- a/kubernetes/RBAC/yaml/test-role.yml
+++ b/kubernetes/RBAC/yaml/test-role.yml
@@ -5,5 +5,5 @@ metadata:
   namespace: kube-system
 rules:
 - apiGroups: ["","apps"]
-  resources: ["deployment","replicasets","pods"]
-  verbs: ["list"]
+  resources: ["deployments","replicasets","pods"]
+  verbs: ["list","get"]
